[package]
name = "dpos"
version = "0.1.0"
authors = ["BaldyAsh <antongrigorjev2010@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.4"
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-service = "1.0.0"
